k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: portfolio-service
          servicePort: 8080
